fix: adjust margin for terms section for consistent spacing

--- a/css/style.css
+++ b/css/style.css
@@ -416,7 +416,7 @@ footer p {
   list-style: none;
 }
 .terms {
-  margin-bottom: 3rem;
+  margin: 3rem;
 }
 .terms h2 {
   margin-top: 1rem;
